--- a/cronjobs/groups/demo-cron/values.yaml
+++ b/cronjobs/groups/demo-cron/values.yaml
@@ -1,5 +1,5 @@
 cronjobs:
-  - name: "test-cron1"
+  - name: "demo-cron1"
     schedule: "*/10 * * * *"
     image:
       path: "busybox"
@@ -7,7 +7,7 @@ cronjobs:
     command: ['echo', 'This is the a test cronjob.']
     maintainers: ['test-user1', 'test-user2']
   
-  - name: "test-cron2"
+  - name: "demo-cron2"
     schedule: "*/5 * * * *"
     image:
       path: "nginx"
